--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,15 +3,35 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @layer base {
+@layer base {
     @font-face {
-      font-family: Proxima Nova;
-      font-weight: 400;
-      src: url(/fonts/proxima-nova/400-regular.woff) format("woff");
-    }
-    @font-face {
-      font-family: Proxima Nova;
-      font-weight: 500;
-      src: url(/fonts/proxima-nova/500-medium.woff) format("woff");
-    }
-  } */
+        font-family: 'webfont';
+        font-display: swap;
+        src: url('//at.alicdn.com/t/webfont_cxas2c0vikn.eot'); /* IE9*/
+        src: url('//at.alicdn.com/t/webfont_cxas2c0vikn.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('//at.alicdn.com/t/webfont_cxas2c0vikn.woff2') format('woff2'),
+        url('//at.alicdn.com/t/webfont_cxas2c0vikn.woff') format('woff'), /* chrome、firefox */
+        url('//at.alicdn.com/t/webfont_cxas2c0vikn.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+        url('//at.alicdn.com/t/webfont_cxas2c0vikn.svg#NotoSansHans-DemiLight') format('svg'); /* iOS 4.1- */
+      },
+      p{
+          @apply font-sans;
+      }
+
+      h1 {
+        @apply text-2xl font-semibold;
+      }
+      h2 {
+        @apply text-xl font-medium;
+      }
+      h3 {
+        @apply text-lg font-normal;
+      }
+      a {
+          @apply text-indigo-600 hover:underline;
+      }
+
+      button{
+          @apply shadow-sm focus:outline-none focus:ring-2 focus:ring-green-600;
+      }
+  }
