--- a/src/css/index.css
+++ b/src/css/index.css
@@ -32,6 +32,6 @@
       }
 
       button{
-          @apply shadow-sm focus:outline-none focus:ring-2 focus:ring-green-600;
+          @apply shadow-sm focus:outline-none focus:ring-2 focus:ring-color-8;
       }
   }
