--- a/src/css/index.css
+++ b/src/css/index.css
@@ -19,13 +19,13 @@
       }
 
       h1 {
-        @apply text-2xl font-semibold;
+        @apply text-2xl font-semibold py-2;
       }
       h2 {
-        @apply text-xl font-medium;
+        @apply text-xl font-medium py-2;
       }
       h3 {
-        @apply text-lg font-normal;
+        @apply text-lg font-medium py-1;
       }
       a {
           @apply text-color-4 hover:underline;
@@ -33,5 +33,13 @@
 
       button{
           @apply shadow-sm focus:outline-none focus:ring-2 focus:ring-color-8;
+      }
+
+      blockquote{
+        @apply border-l-4 border-color-5 py-2 pl-8 bg-color-11
+      }
+
+      hr{
+        @apply border-t-2 pt-2
       }
   }
