修改一些样式

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -28,11 +28,11 @@
         @apply text-lg font-medium py-1;
       }
       a {
-          @apply text-color-4 hover:underline;
+          @apply text-color-4;
       }
 
       button{
-          @apply shadow-sm focus:outline-none focus:ring-2 focus:ring-color-8;
+          @apply shadow-sm focus:outline-none active:shadow-inner;
       }
 
       blockquote{
